# rust-self-learning-memory

./: .clippy.toml  .codecov.yml  .env  .env.example  .gitattributes  .gitignore  .gitleaks.toml  .gitleaksignore  .goap_plan.md  .ignore  .mcp.json  .pr_agent.toml  .pre-commit-config.yaml  .roomodes  .test-quality.toml  .yamllint.yml  :memory:  AGENTS.md  ASYNC_PATTERN_EXTRACTION_SUMMARY.md  CARGO_AUDIT_REPORT.txt  CHANGELOG.md  CONFIG_PHASE6_REFERENCE.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  DEPLOYMENT_READY.md  DEPLOY_NOW.md  EPISODE_MANAGEMENT_ANALYSIS.md  GOAP_EXECUTION_PLAN.md  GOAP_GAP_ANALYSIS.md  HARNESS.md  IMPLEMENTATION_COMPLETE_SUMMARY.md  IMPLEMENTATION_STATUS.md  LICENSE  LOCAL_DB_SETUP_SUMMARY.md  MCP_IMPLEMENTATION_REPORT.md  MCP_SECURITY_IMPLEMENTATION_SUMMARY.md  MIGRATION_GUIDE.md  PATTERN_VALIDATION_SUMMARY.md  PHASE1_IMPLEMENTATION_PLAN.md  (+129 more)
benches/: Cargo.toml  adaptive_ttl_benchmark.rs  cache_benchmarks.rs  compression_benchmark.rs  concurrent_operations.rs  cosine_similarity_benchmark.rs  domain_cache_benchmark.rs  episode_lifecycle.rs  genesis_benchmark.rs  keepalive_pool_benchmark.rs  load_tests.rs  memory_event_benchmark.rs  memory_pressure.rs  multi_backend_comparison.rs  pattern_extraction.rs  phase3_cache_performance.rs  phase3_retrieval_accuracy.rs  prepared_cache_benchmark.rs  query_cache_benchmark.rs  retrieval_quality_benchmark.rs  scalability.rs  similarity_benchmark.rs  soak_tests.rs  spatiotemporal_benchmark.rs  storage_operations.rs  top_k_benchmark.rs  turso_phase1_optimization.rs  turso_vector_performance.rs
benches/benches/: episode_lifecycle.rs  pattern_extraction.rs  storage_operations.rs
benches/src/: benchmark_helpers.rs  lib.rs
examples/: Cargo.toml  README.md  debug_config.rs  debug_storage.rs  local_memory.rs  memory_verification.html  migrate_embeddings_to_multi_dim.rs  probe_hdc.rs  test_local_db.rs  verify_storage.rs
examples/pwa-todo-app/: README.md  index.html  sw.js
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_mcp_jsonrpc.rs  fuzz_postcard_roundtrip.rs  fuzz_search_matchers.rs
memory-cli/: .env.example  CLI_BULK_OPERATIONS.md  CLI_USER_GUIDE.md  CONFIGURATION.md  CONFIGURATION_GUIDE.md  Cargo.toml  README.md  SIMPLE_MODE_GUIDE.md  deploy.sh  test-config.toml
memory-cli/benches/: cli_benchmarks.rs
memory-cli/config/: .env.example  README.md  ci-testing.toml  cloud-production.toml  do-memory-cli.example.toml  local-dev.toml  memory-cli.toml  minimal.toml  test-config.toml
memory-cli/docker/: Dockerfile  docker-compose.yml
memory-cli/monitoring/: prometheus.yml
memory-cli/src/: config.rs  config_legacy.rs  errors.rs  lib.rs  main.rs  output.rs  test_utils.rs
memory-cli/systemd/: memory-cli.service
memory-cli/tests/: cli_coverage_tests.rs  cli_update_test.rs  command_tests.rs  config_command_tests.rs  config_property_tests.rs  embedding_command_tests.rs  episode_update_test.rs  integration_tests.rs  relationship_command_tests.rs  security_tests.rs  snapshot_tests.rs
memory-core/: BULK_OPERATIONS_API.md  Cargo.toml  EMBEDDING_OPTIMIZATION_GUIDE.md  EMBEDDING_PROVIDERS.md  EPISODE_FILTERING.md  EPISODE_MANAGEMENT.md  FUZZY_SEARCH_GUIDE.md  OPTIMIZATION_QUICK_REF.md  PATTERN_SEARCH_FEATURE.md  QUICK_START_EMBEDDINGS.md  README.md  README_SEMANTIC_EMBEDDINGS.md  REGEX_SEARCH_GUIDE.md
memory-core/benches/: indexing_benchmark.rs
memory-core/examples/: async_pattern_extraction.rs  bulk_episode_operations.rs  embedding_config_refactor.rs  embedding_optimization_demo.rs  embeddings_end_to_end.rs  fuzzy_search_demo.rs  multi_provider_embeddings.rs  pattern_search_demo.rs  ranking_demo.rs  regex_search_demo.rs  semantic_embeddings_demo.rs  semantic_summarization.rs  spatiotemporal_basic.rs  spatiotemporal_task_replay.rs  test_postcard_issue.rs
memory-core/src/: constants.rs  embeddings_simple.rs  episode.rs  error.rs  extraction.rs  lib.rs  lib.rs.bak  memory.rs  memory.rs.backup  pattern.rs  reflection.rs  reward.rs  storage.rs  sync.rs  types.rs
memory-core/tests/: PROPERTY_TESTING_GUIDE.md  README_SPATIOTEMPORAL_TESTS.md  adaptive_reward_integration_test.rs  adr044_snapshot_tests.rs  async_extraction.rs  attribution_property_tests.rs  bulk_episode_retrieval_test.rs  capacity_property_tests.rs  checkpoint_property_tests.rs  completion_durability.rs  compliance.rs  context_aware_embeddings_test.rs  domain_cache_integration_test.rs  drift_detection_test.rs  embedding_integration_test.rs  episode_deletion_test.rs  episode_filtering_test.rs  episode_lifecycle_property_tests.rs  episode_property_tests.rs.disabled  error_handling_tests.rs  execution_step_property_tests.rs  exports_test.rs  genesis_integration_test.rs  heuristic_learning.rs  input_validation.rs  learning_cycle.rs  openai_config_phase2_test.rs  pattern_accuracy.rs  pattern_effectiveness_test.rs  pattern_property_tests.rs  pattern_search_integration_test.rs  performance.rs  playbook_property_tests.rs  premem_integration_test.rs  property_tests.proptest-regressions  property_tests.rs  property_tests.rs.disabled  quality_assessment_test.rs  regression.rs  relationship_integration.rs  (+15 more)
memory-events/: Cargo.toml
memory-events/src/: lib.rs
memory-events/tests/: comprehensive_tests.rs  mapping_tests.rs
memory-mcp/: BATCH_OPERATIONS.md  BATCH_OPERATIONS_TOOLS.md  Cargo.toml  EPISODE_LIFECYCLE_TOOLS.md  EPISODE_TAGS_TOOLS.md  IMPLEMENTATION_SUMMARY.md  MCP_ERROR_HANDLING.md  README.md  SECURITY.md  SECURITY_AUDIT.md  package-lock.json  package.json  test_mcp_json.rs
memory-mcp/src/: batch.rs  cache.rs  (+12 more)
memory-storage-duckdb/: Cargo.toml
memory-storage-redb/: Cargo.toml  README.md
memory-storage-turso/: Cargo.toml  KEEPALIVE_POOL_GUIDE.md  README.md
test-utils/: Cargo.toml
tests/: Cargo.toml  LOAD_SOAK_TESTS.md  LOAD_SOAK_TESTS_README.md  arch_fitness.rs  attribution_integration_test.rs  behaviour_harness.rs  checkpoint_integration_test.rs  ets_performance_test.rs  hybrid_storage_consistency.rs  hybrid_storage_recovery.rs  monitoring_integration_test.rs  playbook_integration_test.rs  quality_gates.rs  reward_test.rs  stability_24h.rs
(+2829 files in other folders)
