[workspace]
resolver = "2"
members = [
    "memory-core",
    "memory-storage-turso",
    "memory-storage-redb",
    "memory-mcp",
    "memory-cli",
    "test-utils",
    "benches",
    "tests",
    "examples",
]

[workspace.package]
version = "0.1.12"
edition = "2021"
authors = ["Self-Learning Memory Contributors"]
license = "MIT"
repository = "https://github.com/d-o-hub/rust-self-learning-memory"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.49", features = ["full"] }
async-trait = "0.1"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Disable default features to avoid heapless -> atomic-polyfill dependency (RUSTSEC-2023-0089)
# heapless is not needed for our use case - we use postcard only for alloc support
postcard = { version = "1.1.3", default-features = false, features = ["alloc"] }

# Database
libsql = "0.9"
redb = "2.6"

# UUID and time
uuid = { version = "1.19", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Testing
tempfile = "3.24"

# Benchmarking
criterion = "0.5"

# WASM and JavaScript execution
rquickjs = "0.11.0"
wasmtime = "40.0.2"
wasmtime-wasi = "40.0.2"

# Additional utilities
parking_lot = "0.12"
url = "2.5"
sha2 = "0.10"
rand = "0.8"
rand_chacha = "0.3"
clap = { version = "4.5", features = ["derive"] }
statrs = "0.16"
futures = "0.3"
sysinfo = "0.37"
zipf = "7.0"
fs_extra = "1.3"
num_cpus = "1.16"
rustc-version = "0.4"

# Consolidated duplicate dependencies
approx = "0.5.1"
nalgebra = "0.34.1"
argmin = "0.11.0"
argmin-math = "0.5.1"
rv = "0.19.1"
simba = "0.9.1"
base64 = "0.22.1"
lru = "0.12"

# Note: Some duplicates are from transitive dependencies we cannot easily control:
# - argmin 0.8.1 and argmin-math 0.3.0 come from augurs-changepoint -> changepoint -> rv
# - hashbrown versions come from wasmtime, libsql, and other external dependencies
# - itertools versions come from criterion, prost, rv, and augurs

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

# Coverage configuration for cargo-llvm-cov
[workspace.metadata.coverage]
exclude-from-coverage = ["tests", "benches"]
