[workspace]
resolver = "2"
members = [
    "memory-core",
    "memory-storage-turso",
    "memory-storage-redb",
    "memory-mcp",
    "memory-cli",
    "test-utils",
    "benches",
    "tests",
    "examples",
]

[workspace.package]
version = "0.1.16"
edition = "2024"
authors = ["Self-Learning Memory Contributors"]
license = "MIT"
repository = "https://github.com/d-o-hub/rust-self-learning-memory"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.49", features = ["full"] }
async-trait = "0.1.89"

# Error handling
anyhow = "1.0.100"
thiserror = "2.0.18"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
# Disable default features to avoid heapless -> atomic-polyfill dependency (RUSTSEC-2023-0089)
# heapless is not needed for our use case - we use postcard only for alloc support
postcard = { version = "1.1.3", default-features = false, features = ["alloc"] }

# Database
libsql = "0.9.29"
redb = "2.6"

# UUID and time
uuid = { version = "1.21", features = ["v4", "serde"] }
chrono = { version = "0.4.43", features = ["serde"] }

# Logging and tracing
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

# Testing
tempfile = "3.25.0"

# Benchmarking
criterion = "0.8"

# WASM and JavaScript execution
rquickjs = "0.11.0"
wasmtime = "41.0.1"
wasmtime-wasi = "41.0.1"

# Additional utilities
parking_lot = "0.12.5"
url = "2.5.8"
rand = "0.8"
rand_chacha = "0.3"
clap = { version = "4.5.60", features = ["derive"] }

# Async utilities
futures = "0.3.31"
# Consolidated duplicate dependencies
base64 = "0.22.1"
lru = "0.16.3"
regex = "1.12"

    # Note: Some duplicates are from transitive dependencies we cannot easily control:
    # - argmin 0.8.1 and argmin-math 0.3.0 come from augurs-changepoint -> changepoint -> rv
    # - hashbrown versions come from wasmtime, libsql, and other external dependencies
    # - itertools versions come from criterion, prost, rv, and augurs

 # Security patches are now inline in workspace dependencies
 # - hyper-rustls 0.27.7 fixes RUSTSEC-2025-0134 (rustls-pemfile)
 # - changepoint 0.15.0 in memory-core fixes RUSTSEC-2026-0002 (lru)
 #
 # NOTE: These are documented but not forcing transitive dependencies yet due to
 # Cargo limitations. Requires upstream updates in libsql and augurs crates.
 # See SECURITY.md for details on advisories and mitigation.

# Coverage configuration for cargo-llvm-cov
[workspace.metadata.coverage]
exclude-from-coverage = ["tests", "benches"]

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
