[workspace]
resolver = "2"
members = [
    "memory-core",
    "memory-storage-turso",
    "memory-storage-redb",
    "memory-mcp",
    "memory-cli",
    "test-utils",
    "benches",
    "tests",
    "examples",
]

[workspace.package]
version = "0.1.22"
edition = "2024"
authors = ["Self-Learning Memory Contributors"]
license = "MIT"
repository = "https://github.com/d-o-hub/rust-self-learning-memory"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.50", features = ["full"] }
async-trait = "0.1.89"

# Error handling
anyhow = "1.0.102"
thiserror = "2.0.18"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
# Disable default features to avoid heapless -> atomic-polyfill dependency (RUSTSEC-2023-0089)
# heapless is not needed for our use case - we use postcard only for alloc support
postcard = { version = "1.1.3", default-features = false, features = ["alloc"] }

# Database
libsql = "0.9.29"
redb = "3.1"

# UUID and time
uuid = { version = "1.22", features = ["v4", "serde"] }
chrono = { version = "0.4.44", features = ["serde"] }

# Logging and tracing
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

# Testing
tempfile = "3.27.0"
proptest = "1.6"
insta = { version = "1.46", features = ["json"] }
serial_test = "3.4"
assert_cmd = "2.2"
predicates = "3.1"

# Benchmarking
criterion = "0.8"

# WASM and JavaScript execution
rquickjs = "0.11.0"
wasmtime = "43.0.0"
wasmtime-wasi = "43.0.0"

# Additional utilities
parking_lot = "0.12.5"
url = "2.5.8"
rand = { version = "0.10", features = ["thread_rng"] }
rand_chacha = "0.10"
clap = { version = "4.6.0", features = ["derive"] }

# Async utilities
futures = "0.3.32"

# Consolidated duplicate dependencies
base64 = "0.22.1"
lru = "0.16.3"
regex = "1.12"

# Configuration
toml = "1.0"

# Note: Some duplicates are from transitive dependencies we cannot easily control:
# - argmin 0.8.1 and argmin-math 0.3.0 come from augurs-changepoint -> changepoint -> rv
# - hashbrown versions come from wasmtime, libsql, and other external dependencies
# - itertools versions come from criterion, prost, rv, and augurs
# - getrandom versions come from rand 0.8/0.9/0.10 ecosystem split
# - nalgebra/ndarray versions come from changepoint/argmin-math ecosystem

# Transitive dependency security advisories are tracked in config files:
# - .cargo/audit.toml: cargo-audit advisory ignores
# - deny.toml: cargo-deny advisory ignores
# These document the dependency chain, semver constraints, and upstream status.
# Never hardcode --ignore flags in CI workflow commands.
# See agent_docs/dependency_upgrades.md for the advisory handling decision flowchart.

# Coverage configuration for cargo-llvm-cov
[workspace.metadata.coverage]
exclude-from-coverage = ["tests", "benches"]

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
