[package]
name = "memory-benches"
version.workspace = true
edition = "2021"
license = "MIT"
publish = false

[dependencies]
criterion = { version = "0.5", features = ["async_tokio", "async_futures"] }
regex = "1.10"
memory-core = { path = "../memory-core" }
memory-storage-redb = { path = "../memory-storage-redb" }
memory-storage-turso = { path = "../memory-storage-turso" }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
tempfile = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
sysinfo = "0.37"
zipf = "7.0"
rand = { workspace = true }
rand_chacha = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
fs_extra = "1.3"
once_cell = "1.19"

[[bench]]
name = "episode_lifecycle"
path = "episode_lifecycle.rs"
harness = false

[[bench]]
name = "pattern_extraction"
path = "pattern_extraction.rs"
harness = false

[[bench]]
name = "storage_operations"
path = "storage_operations.rs"
harness = false

[[bench]]
name = "concurrent_operations"
path = "concurrent_operations.rs"
harness = false

[[bench]]
name = "memory_pressure"
path = "memory_pressure.rs"
harness = false

[[bench]]
name = "scalability"
path = "scalability.rs"
harness = false

[[bench]]
name = "multi_backend_comparison"
path = "multi_backend_comparison.rs"
harness = false

[[bench]]
name = "genesis_benchmark"
path = "genesis_benchmark.rs"
harness = false

[[bench]]
name = "phase3_retrieval_accuracy"
path = "phase3_retrieval_accuracy.rs"
harness = false

[[bench]]
name = "spatiotemporal_benchmark"
path = "spatiotemporal_benchmark.rs"
harness = false

[[bench]]
name = "turso_vector_performance"
path = "turso_vector_performance.rs"
harness = false

[[bench]]
name = "query_cache_benchmark"
path = "query_cache_benchmark.rs"
harness = false

[[bench]]
name = "domain_cache_benchmark"
path = "domain_cache_benchmark.rs"
harness = false

[[bench]]
name = "cache_benchmarks"
path = "cache_benchmarks.rs"
harness = false

[[bench]]
name = "keepalive_pool_benchmark"
path = "keepalive_pool_benchmark.rs"
harness = false

