[package]
name = "memory-benches"
version.workspace = true
edition.workspace = true
license = "MIT"
publish = false

[dependencies]
criterion = { version = "0.8", features = ["async_tokio", "async_futures"] }
regex = "1.10"
memory-core = { path = "../memory-core" }
memory-storage-redb = { path = "../memory-storage-redb" }
memory-storage-turso = { path = "../memory-storage-turso", features = ["keepalive-pool", "compression"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
tempfile = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
sysinfo = "0.38"
zipf = "7.0"
rand = { workspace = true }
rand_chacha = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
fs_extra = "1.3"
once_cell = "1.19"

[[bench]]
name = "episode_lifecycle"
path = "episode_lifecycle.rs"
harness = false

[[bench]]
name = "pattern_extraction"
path = "pattern_extraction.rs"
harness = false

[[bench]]
name = "storage_operations"
path = "storage_operations.rs"
harness = false

[[bench]]
name = "concurrent_operations"
path = "concurrent_operations.rs"
harness = false

[[bench]]
name = "memory_pressure"
path = "memory_pressure.rs"
harness = false

[[bench]]
name = "scalability"
path = "scalability.rs"
harness = false

[[bench]]
name = "multi_backend_comparison"
path = "multi_backend_comparison.rs"
harness = false

[[bench]]
name = "genesis_benchmark"
path = "genesis_benchmark.rs"
harness = false

[[bench]]
name = "phase3_retrieval_accuracy"
path = "phase3_retrieval_accuracy.rs"
harness = false

[[bench]]
name = "spatiotemporal_benchmark"
path = "spatiotemporal_benchmark.rs"
harness = false

[[bench]]
name = "turso_vector_performance"
path = "turso_vector_performance.rs"
harness = false

[[bench]]
name = "query_cache_benchmark"
path = "query_cache_benchmark.rs"
harness = false

[[bench]]
name = "domain_cache_benchmark"
path = "domain_cache_benchmark.rs"
harness = false

[[bench]]
name = "cache_benchmarks"
path = "cache_benchmarks.rs"
harness = false

[[bench]]
name = "keepalive_pool_benchmark"
path = "keepalive_pool_benchmark.rs"
harness = false

[[bench]]
name = "compression_benchmark"
path = "compression_benchmark.rs"
harness = false


[[bench]]
name = "phase3_cache_performance"
path = "phase3_cache_performance.rs"
harness = false

[[bench]]
name = "prepared_cache_benchmark"
path = "prepared_cache_benchmark.rs"
harness = false

# NOTE: These benchmarks use APIs that don't exist in the current codebase.
# They have been disabled to fix the build. Re-enable after implementing the required APIs.
# [[bench]]
# name = "load_tests"
# path = "load_tests.rs"
# harness = false

# [[bench]]
# name = "soak_tests"
# path = "soak_tests.rs"
# harness = false

[features]
default = []
full-soak = []
