[package]
name = "memory-examples"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Workspace dependencies
memory-core = { path = "../memory-core" }
memory-storage-redb = { path = "../memory-storage-redb" }
memory-storage-turso = { path = "../memory-storage-turso" }
memory-cli = { path = "../memory-cli" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tokio.workspace = true
tempfile.workspace = true
uuid.workspace = true
rand = "0.8"

[[bin]]
name = "verify_storage"
path = "verify_storage.rs"

[[bin]]
name = "store_opencode_config"
path = "store_opencode_config.rs"

[[bin]]
name = "pattern_extraction_demo"
path = "pattern_extraction_demo.rs"

[[bin]]
name = "success_rate_validator"
path = "success_rate_validator.rs"

[[bin]]
name = "performance_validation"
path = "performance_validation.rs"

[[bin]]
name = "test_local_db"
path = "test_local_db.rs"