[package]
name = "memory-examples"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Workspace dependencies
memory-core = { path = "../memory-core" }
memory-storage-redb = { path = "../memory-storage-redb" }
memory-storage-turso = { path = "../memory-storage-turso" }
anyhow.workspace = true
serde_json.workspace = true
tokio.workspace = true
tempfile.workspace = true
tracing-subscriber.workspace = true
libsql.workspace = true

[[bin]]
name = "verify_storage"
path = "verify_storage.rs"

[[bin]]
name = "migrate_embeddings_to_multi_dim"
path = "migrate_embeddings_to_multi_dim.rs"

[[bin]]
name = "debug_config"
path = "debug_config.rs"

[[bin]]
name = "debug_storage"
path = "debug_storage.rs"

