[package]
name = "memory-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Workspace dependencies
memory-core = { path = "../memory-core" }
memory-storage-turso = { path = "../memory-storage-turso", optional = true }
memory-storage-redb = { path = "../memory-storage-redb", optional = true }



# CLI framework
clap = { version = "4.5", features = ["derive", "color", "suggestions"] }
clap_complete = "4.5"

# Serialization
serde.workspace = true
serde_json.workspace = true

# Additional CLI dependencies
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
uuid.workspace = true
chrono.workspace = true

# Configuration file support
toml = "0.9"

# Optional features for output formatting
serde_yaml = "0.9"
colored = "3.0"
indicatif = "0.18"
dialoguer = "0.12"

# Additional CLI dependencies for operational features
regex = "1.10"

# Platform and system utilities for smart defaults
dirs = "6.0"
sysinfo = "0.37"

# Test utilities dependencies
assert_cmd = "2.1"
predicates = "3.0"
tempfile = { workspace = true }
test-utils = { path = "../test-utils" }

[features]
default = ["redb"]
turso = ["memory-storage-turso", "memory-storage-redb"]
redb = ["memory-storage-redb"]
# Embedding provider features (pass through to memory-core)
openai = ["memory-core/openai"]
local-embeddings = ["memory-core/local-embeddings"]
embeddings-full = ["memory-core/embeddings-full"]
# Full feature set
full = ["turso", "redb", "embeddings-full"]

[dev-dependencies]
# Testing framework
tokio-test = "0.4"
tempfile = { workspace = true }
assert_cmd = "2.1"
predicates = "3.0"
rstest = "0.26"

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# Test utilities
test-utils = { path = "../test-utils" }

# Additional test dependencies
serde_test = "1.0"
proptest = "1.4"
regex = "1.10"

[[bench]]
name = "cli_benchmarks"
harness = false

[lib]
name = "memory_cli"
path = "src/lib.rs"

[[bin]]
name = "memory-cli"
path = "src/main.rs"