[package]
name = "do-memory-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line interface for do-memory-core episodic learning system"

[dependencies]
# Workspace dependencies
do-memory-core = { path = "../memory-core" }
do-memory-storage-turso = { path = "../memory-storage-turso", optional = true }
do-memory-storage-redb = { path = "../memory-storage-redb", optional = true }



# CLI framework
clap = { version = "4.6.1", features = ["derive", "color", "suggestions"] }
clap_complete = "4.6.3"

# Serialization
serde.workspace = true
serde_json.workspace = true

# Additional CLI dependencies
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
uuid.workspace = true
chrono.workspace = true

# Configuration file support
toml = "1.1"

# Optional features for output formatting
serde_yaml = "0.9"
colored = "3.0"
indicatif = "0.18"
dialoguer = "0.12"

# Additional CLI dependencies for operational features

# Platform and system utilities for smart defaults
dirs = "6.0"
sysinfo = "0.38"

# Test utilities dependencies
assert_cmd = "2.2"
tempfile = { workspace = true }
do-memory-test-utils = { path = "../test-utils" }

[features]
default = ["redb"]
turso = ["do-memory-storage-turso", "do-memory-storage-turso/keepalive-pool", "do-memory-storage-redb"]
redb = ["do-memory-storage-redb"]
# Embedding provider features (pass through to memory-core)
openai = ["do-memory-core/openai"]
mistral = ["do-memory-core/mistral"]
local-embeddings = ["do-memory-core/local-embeddings"]
embeddings-full = ["do-memory-core/embeddings-full"]
# Full feature set
full = ["turso", "redb", "embeddings-full"]

[dev-dependencies]
# Testing framework
tempfile = { workspace = true }
assert_cmd = "2.2"
predicates = "3.1"
serial_test = "3.4"

# Benchmarking
criterion = { version = "0.8", features = ["html_reports"] }

# Test utilities
do-memory-test-utils = { path = "../test-utils" }

# Additional test dependencies
proptest = "1.11"
insta = { version = "1.47", features = ["json"] }

[[bench]]
name = "cli_benchmarks"
harness = false

[lib]
name = "do_memory_cli"
path = "src/lib.rs"

[[bin]]
name = "do-memory-cli"
path = "src/main.rs"

# Inherit workspace lints

[lints]
workspace = true
