[package]
name = "memory-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage = "https://github.com/d-o-hub/rust-self-learning-memory"
readme = "README.md"
description = "Core episodic learning system for AI agents with pattern extraction, reward scoring, and dual storage backend"
keywords = ["ai", "memory", "learning", "episodic", "patterns"]
categories = ["database", "development-tools", "science"]
documentation = "https://docs.rs/memory-core"

[features]
default = []
# Enable OpenAI embedding provider
openai = ["reqwest"]
# Enable all embedding providers
embeddings-full = ["openai"]
# Enable local embedding models (requires model files)
local-embeddings = ["ort", "tokenizers", "ndarray", "reqwest/stream"]
# Enable hybrid search with FTS5
hybrid_search = []

[dependencies]
# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# UUID and time
uuid = { workspace = true }
chrono = { workspace = true }

# Logging
tracing = { workspace = true }

# Futures utilities
futures = { workspace = true }

# LRU cache for query caching (using workspace version for consistency)
lru = { workspace = true }

# HTTP client for OpenAI API (optional)
reqwest = { version = "0.13", features = ["json"], optional = true }

# ONNX Runtime for local embeddings (optional)
ort = { version = "2.0.0-rc.11", optional = true }

# Tokenizers for local embeddings (optional)
tokenizers = { version = "0.22", optional = true }

# ndarray for tensor operations (required by ort)
# Using 0.16.x to match ort 2.0.0-rc.10's ndarray dependency
ndarray = { version = "0.16", optional = true }

# Changepoint detection using PELT algorithm
augurs-changepoint = "0.10.1"

# Random number generation for tests
rand = "0.8"

# Fuzzy string matching for search
strsim = "0.11"

# Regular expressions for pattern matching
regex = "1.10"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = { workspace = true }
memory-storage-turso = { path = "../memory-storage-turso" }
memory-storage-redb = { path = "../memory-storage-redb" }
libsql = { workspace = true }

[lints.clippy]
# Core library gets pedantic linting for best practices
pedantic = { level = "warn" }
missing_docs_in_private_items = { level = "allow" }
missing_errors_doc = { level = "warn" }
missing_safety_doc = { level = "warn" }
doc_markdown = { level = "warn" }
